--- a/src/blocks/social-profiles/styles/editor.scss
+++ b/src/blocks/social-profiles/styles/editor.scss
@@ -1,10 +1,6 @@
 .wp-block-coblocks-social-profiles {
-	&__button {
+	.wp-block-coblocks-social__button {
 		transition: opacity 0.2s ease;
-
-		&:active {
-			animation: none !important;
-		}
 
 		&.is-empty {
 			opacity: 0.4;
@@ -26,84 +22,6 @@
 	}
 }
 
-.block-editor-block-preview__content {
-	.wp-block-coblocks-social-profiles {
-		align-content: center;
-		align-items: center;
-		display: flex;
-		height: 100%;
-		justify-content: center;
-		text-align: center !important;
-
-		&.is-style-mask {
-			.wp-block-coblocks-social-profiles__icon {
-				height: 32px !important;
-				width: 32px !important;
-			}
-		}
-
-		&.is-style-text,
-		&.is-style-icon-and-text {
-			.wp-block-coblocks-social-profiles__button {
-				width: 75%;
-			}
-		}
-
-		&.is-style-circular {
-			.wp-block-coblocks-social-profiles__icon {
-				height: 18px !important;
-				width: 18px !important;
-			}
-			.wp-block-coblocks-social-profiles__button {
-				padding: 14px !important;
-			}
-		}
-
-		ul {
-			margin: 0;
-		}
-
-		li {
-			display: none;
-			margin: 0 !important;
-
-			&:first-child {
-				display: block;
-			}
-
-			&::before,
-			&::after {
-				display: none;
-			}
-		}
-
-		&__text {
-			max-width: 70%;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-		}
-
-		&__button {
-			margin: 0;
-			max-width: 100%;
-			padding-left: 10px;
-			padding-right: 10px;
-			width: 100%;
-		}
-	}
-
-	// Gutenberg 5.9+ tweaks.
-}
-
-.components-range-control + .components-coblocks-inspector__social-button-size {
-	margin-top: -13px !important;
-}
-
-.components-social-links-list__label {
-	margin-bottom: 6px;
-}
-
 .edit-post-settings-sidebar__panel-block .components-social-links-list {
 	.components-base-control {
 		margin-bottom: 8px;
@@ -111,6 +29,7 @@
 }
 
 .block-library-button__inline-link--coblocks {
+	margin-bottom: 0;
 	margin-top: 0;
 	width: 338px;
 }
