Add Social Profiles block (#664)
* Adding the social-profiles block to the project. Based off share block.

* Tied in icons and new class names in style.scss and editor.scss

* Added TextControl to inspector and changed variable names in files.

* Added SVGs for social profiles.

* Reordered components. Tied in styles in front-end and editor. Removed excess controls from share block conversion.

* reordered attributes.

* Added panel for link settings in the inspector element.

* Added placeholder for icons to display when block is not yet configured.

* Updated block.json with new attributes

* Added transforms.js and property to social-profiles block.

* Transforms to and from share block. Attributes are lost.

* Trying more transforms options.

* Added lodash/escape into social-profiles inspector.

* Fixed typo in lodash import.

* Added transforms to social that carry attributes. Needing to setup the pass back to social-profiles.

* Finished passing attributres back and forth.

* removed console logs and smashed final bugs.

* Formatting and removed console.logs

* Moved styles into /styles dir to follow share block structure.

* Added socialProfileAttributes to share block.json

* Tweek to social icon colors.

* removed block.json from share and social to more closely match core structure.

* Update social profiles icon

* Tweak keywords and description

* Improved UX for adding links/icons

* Tweak placeholder

* Merging styles. Classname mismatch.

* Fixes

* Removing debug code.

* Remove console logging.

* Remove excess styling

* left a useless functions from early development. Those have been removed. Block seems to work well now.

* Move social profiles specific styles into it's own stylesheet

* Switch to using buttons instead of spans

* Add aria

* Tweak labels and text

* PHPCS

* Fix typos

* add local storage based transform. Remove cross block attributes.

* switch to i

--- a/src/blocks/share/styles/editor.scss
+++ b/src/blocks/share/styles/editor.scss
@@ -74,7 +74,8 @@
 	}
 
 	// Gutenberg 5.9+ tweaks.
-	[data-type="coblocks/social"] [data-block] {
+	[data-type="coblocks/social"] [data-block],
+	[data-type="coblocks/social-profiles"] [data-block] {
 		margin-bottom: 0;
 
 		.wp-block-coblocks-social {
@@ -100,6 +101,12 @@
 }
 
 .edit-post-settings-sidebar__panel-block .components-social-icons-list {
+	.components-base-control {
+		margin-bottom: 8px;
+	}
+}
+
+.edit-post-settings-sidebar__panel-block .components-social-links-list {
 	.components-base-control {
 		margin-bottom: 8px;
 	}
