Added icons to edit for social profiles

--- a/src/blocks/social-profiles/styles/editor.scss
+++ b/src/blocks/social-profiles/styles/editor.scss
@@ -31,3 +31,35 @@
 		margin-bottom: 0;
 	}
 }
+
+.wp-block-coblocks-social__button--twitter .wp-block-coblocks-social__icon {
+	-webkit-mask-image: url(images/social/twitter.svg);
+	mask-image: url(images/social/twitter.svg); }
+
+.wp-block-coblocks-social__button--facebook .wp-block-coblocks-social__icon {
+	-webkit-mask-image: url(images/social/facebook.svg);
+	mask-image: url(images/social/facebook.svg); }
+
+.wp-block-coblocks-social__button--pinterest .wp-block-coblocks-social__icon {
+	-webkit-mask-image: url(images/social/pinterest.svg);
+	mask-image: url(images/social/pinterest.svg); }
+
+.wp-block-coblocks-social__button--linkedin .wp-block-coblocks-social__icon {
+	-webkit-mask-image: url(images/social/linkedin.svg);
+	mask-image: url(images/social/linkedin.svg); }
+
+.wp-block-coblocks-social__button--instagram .wp-block-coblocks-social__icon {
+	-webkit-mask-image: url(images/social/instagram.svg);
+	mask-image: url(images/social/instagram.svg); }
+
+.wp-block-coblocks-social__button--yelp .wp-block-coblocks-social__icon {
+	-webkit-mask-image: url(images/social/yelp.svg);
+	mask-image: url(images/social/yelp.svg); }
+
+.wp-block-coblocks-social__button--youtube .wp-block-coblocks-social__icon {
+	-webkit-mask-image: url(images/social/youtube.svg);
+	mask-image: url(images/social/youtube.svg); }
+
+.wp-block-coblocks-social__button--houzz .wp-block-coblocks-social__icon {
+	-webkit-mask-image: url(images/social/houzz.svg);
+	mask-image: url(images/social/houzz.svg); }
