--- a/src/blocks/food-and-drinks/food-item/styles/style.scss
+++ b/src/blocks/food-and-drinks/food-item/styles/style.scss
@@ -1,13 +1,20 @@
 .wp-block-coblocks-food-item {
-	flex: 1 50%;
+	display: -ms-grid;
+	flex: 1 1 auto;
+	-ms-grid-columns: 50% auto;
 	margin-top: 2.75em;
 
 	[data-columns="3"] & {
 		flex: 1 33.33%;
+		-ms-grid-column: 3;
 	}
 
 	.wp-block-coblocks-food-and-drinks[data-columns="2"]:not(.is-style-list) & {
+		display: -ms-grid;
+		-ms-flex-flow: none;
+		-ms-grid-columns: 50% auto;
 		&:nth-child(even) {
+			-ms-grid-column: 2;
 			padding-right: 20px;
 
 			@media all and (max-width: 514px) {
