--- a/src/blocks/share/styles/style.scss
+++ b/src/blocks/share/styles/style.scss
@@ -1,8 +1,6 @@
 // Supported icons.
-$icons: (twitter, #55acee), (facebook, #3b5999), (pinterest, #bd081c),
-	(linkedin, #0077b5), (tumblr, #34465d), (reddit, #ff5700), (email, #2880e5),
-	(google, #dd4b39), (yelp, #d32323), (youtube, #ff0000), (instagram, #ef0175),
-	(houzz, #4ebc16);
+$icons: (twitter, #55acee), (facebook, #3b5999), (pinterest, #e60023), (linkedin, #0077b5), (tumblr, #34465d), (reddit, #ff5700), (email, #2880e5),
+	(google, #dd4b39), (yelp, #d32323), (youtube, #ff0000), (instagram, #ef0175), (houzz, #4ebc16);
 
 .wp-block-coblocks-social {
 	// Fallback color to match core button block.
@@ -175,8 +173,7 @@ $icons: (twitter, #55acee), (facebook, #3b5999), (pinterest, #bd081c),
 		}
 
 		// Icon only style.
-		&:not(.is-style-text):not(.is-style-icon-and-text):not(.is-style-circular)
-			.wp-block-coblocks-social__button {
+		&:not(.is-style-text):not(.is-style-icon-and-text):not(.is-style-circular) .wp-block-coblocks-social__button {
 			padding: 8px 16px;
 		}
 
@@ -193,8 +190,7 @@ $icons: (twitter, #55acee), (facebook, #3b5999), (pinterest, #bd081c),
 
 	&.has-button-size-lrg {
 		// Icon only style.
-		&:not(.is-style-text):not(.is-style-icon-and-text):not(.is-style-circular)
-			.wp-block-coblocks-social__button {
+		&:not(.is-style-text):not(.is-style-icon-and-text):not(.is-style-circular) .wp-block-coblocks-social__button {
 			padding: 14px 32px;
 		}
 
