--- a/src/blocks/food-and-drinks/food-item/styles/style.scss
+++ b/src/blocks/food-and-drinks/food-item/styles/style.scss
@@ -1,21 +1,21 @@
 :-ms-fullscreen,
 :root .entry-content {
 	.wp-block-coblocks-food-item {
-		color: red;
-		overflow: hidden;
+		overflow: hidden; // Hides element overflow
 
 		&:nth-child(even) {
-			margin-right: 50%;
+			margin-right: 50%; // Handles grid spacing issues
 		}
 
 		&:nth-child(odd) {
-			margin-left: 50%;
+			margin-left: 50%; // Handles grid spacing issues
 		}
 	}
 }
 
 :-ms-fullscreen,
 :root .wp-block-coblocks-food-item {
+	// Handle image display both on page and in-editor
 	figure {
 		margin-top: 33px;
 		overflow: hidden;
