--- a/src/blocks/services/service/styles/style.scss
+++ b/src/blocks/services/service/styles/style.scss
@@ -1,7 +1,8 @@
 .wp-block-coblocks-service {
-	figure {
+	&__figure {
 		display: flex;
 		overflow: hidden;
+		margin: 0;
 		padding-top: calc(9 / 16 * 100%);
 		position: relative;
 		width: 100%;
@@ -22,6 +23,21 @@
 			position: absolute;
 			top: 0;
 			vertical-align: middle;
+		}
+	}
+
+	&__content {
+		h3 {
+			margin-bottom: 0;
+		}
+
+		p {
+			margin-top: 0.5em;
+		}
+
+		.wp-block-button {
+			margin-top: 0;
+			margin-bottom: 0;
 		}
 	}
 }
