--- a/src/blocks/services/styles/editor.scss
+++ b/src/blocks/services/styles/editor.scss
@@ -16,6 +16,11 @@
 	.wp-block[data-type="coblocks/service"] {
 		flex: 1 100%;
 		max-width: 100%;
+
+		> .block-editor-block-list__block-edit {
+			margin-top: 0;
+			margin-bottom: 0;
+		}
 	}
 
 	&[data-columns="2"] .wp-block[data-type="coblocks/service"] {
