Tweak to utilize ResizableBox component

--- a/src/blocks/logos/styles/editor.scss
+++ b/src/blocks/logos/styles/editor.scss
@@ -7,6 +7,14 @@
 		user-select: none;
 		justify-content: center;
 		align-items: center;
+
+		.logo {
+			padding: 1em;
+
+			&:focus {
+				outline: none;	
+			}
+		}
 	}
 
 	.components-placeholder.block-editor-media-placeholder {
