--- a/src/blocks/services/styles/editor.scss
+++ b/src/blocks/services/styles/editor.scss
@@ -5,8 +5,13 @@
 
 	.block-editor-block-list__layout {
 		display: flex;
-		flex-flow: row;
+		flex-flow: row nowrap;
 		justify-content: space-between;
+
+		// On small screens, we are no longer using row direction but column.
+		@media all and (max-width: 514px) {
+			flex-direction: column;
+		}
 
 		.block-editor-block-list__layout {
 			display: block;
@@ -18,19 +23,26 @@
 		max-width: 100%;
 
 		> .block-editor-block-list__block-edit {
-			margin-top: 0;
-			margin-bottom: 0;
+			margin-top: 1em;
+			margin-bottom: 1em;
 		}
 	}
 
-	&[data-columns="2"] .wp-block[data-type="coblocks/service"] {
-		flex: 1 calc(100% / 2);
-		max-width: calc(100% / 2);
-	}
+	@media all and (min-width: 514px) {
+		> .block-editor-block-list__block-edit {
+			margin-top: 0;
+			margin-bottom: 0;
+		}
 
-	&[data-columns="3"] .wp-block[data-type="coblocks/service"] {
-		flex: 1 calc(100% / 3);
-		max-width: calc(100% / 3);
+		&[data-columns="2"] .wp-block[data-type="coblocks/service"] {
+			flex: 1 calc(100% / 2);
+			max-width: calc(100% / 2);
+		}
+
+		&[data-columns="3"] .wp-block[data-type="coblocks/service"] {
+			flex: 1 calc(100% / 3);
+			max-width: calc(100% / 3);
+		}
 	}
 
 	.wp-block-image .block-editor-rich-text,
