--- a/src/blocks/services/styles/style.scss
+++ b/src/blocks/services/styles/style.scss
@@ -1,24 +1,33 @@
 .wp-block-coblocks-services {
 	display: flex;
-	flex-flow: row;
+	flex-flow: row nowrap;
 	justify-content: space-between;
 
-	> .wp-block-coblocks-service {
-		margin: 0 15px;
+	// On small screens, we are no longer using row direction but column.
+	@media all and (max-width: 514px) {
+		flex-direction: column;
 	}
 
 	> .wp-block-coblocks-service {
 		flex: 1 100%;
 		max-width: 100%;
+		margin: 1em;
 	}
 
-	&[data-columns="2"] > .wp-block-coblocks-service {
-		flex: 1 calc(100% / 2);
-		max-width: calc(100% / 2);
-	}
+	@media all and (min-width: 514px) {
+		> .wp-block-coblocks-service {
+			margin-top: 0;
+			margin-bottom: 0;
+		}
 
-	&[data-columns="3"] > .wp-block-coblocks-service {
-		flex: 1 calc(100% / 3);
-		max-width: calc(100% / 3);
+		&[data-columns="2"] > .wp-block-coblocks-service {
+			flex: 1 calc(100% / 2);
+			max-width: calc(100% / 2);
+		}
+
+		&[data-columns="3"] > .wp-block-coblocks-service {
+			flex: 1 calc(100% / 3);
+			max-width: calc(100% / 3);
+		}
 	}
 }
