Match styles with IE11

--- a/src/blocks/hero/styles/style.scss
+++ b/src/blocks/hero/styles/style.scss
@@ -2,22 +2,14 @@
 :root .entry-content {
 	.wp-block-coblocks-hero {
 		&__inner {
-			// display: -ms-flex;
-			// display: grid;
-			// -ms-grid-columns: (auto) [3];
-
-			// grid-template-columns: repeat(3, auto);
-			// -ms-grid-rows: (1fr) [3];
-			// grid-template-rows: repeat(3, 1fr);
-			// position: relative;
 
 			display: table;
 			width: 100%;
 
-			&.hero-center-left-align {
-				.wp-block-coblocks-hero__box {
+			&.hero-top-left-align {
+				> .wp-block-coblocks-hero__box {
 					display: table-cell;
-					vertical-align: middle;
+					vertical-align: top;
 					width: 30%;
 					h2 {
 						width: 33%;
@@ -27,27 +19,38 @@
 					}
 				}
 			}
-			&.hero-top-left-align {
-				> .wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: middle;
-					width: 30%;
-				}
-			}
 
 			&.hero-top-center-align {
 				> .wp-block-coblocks-hero__box {
 					display: table-cell;
-					vertical-align: middle;
+					vertical-align: top;
 					width: 30%;
+					p {
+						padding-left: 33%;
+						padding-right: 33%;
+					}
 				}
 			}
 
 			&.hero-top-right-align {
 				> .wp-block-coblocks-hero__box {
 					display: table-cell;
+					vertical-align: top;
+					width: 30%;
+				}
+				p {
+					padding-left: 66%;
+				}
+			}
+
+			&.hero-center-left-align {
+				.wp-block-coblocks-hero__box {
+					display: table-cell;
 					vertical-align: middle;
 					width: 30%;
+					p {
+						width: 33%;
+					}
 				}
 			}
 
@@ -57,13 +60,21 @@
 					vertical-align: middle;
 					width: 30%;
 				}
+				p {
+					padding-left: 33%;
+					padding-right: 33%;
+				}
 			}
 
 			&.hero-center-center-align.is-fullscreen {
 				> .wp-block-coblocks-hero__box {
 					display: table-cell;
 					vertical-align: middle;
-					width: 30%;
+					width: 33%;
+				}
+				p {
+					padding-left: 33%;
+					padding-right: 33%;
 				}
 			}
 
@@ -72,36 +83,44 @@
 					display: table-cell;
 					vertical-align: middle;
 					width: 30%;
-					h2 {
-						width: 33%;
-					}
 					p {
-						width: 33%;
-					}
+						padding-left: 66%;
+					 }
 				}
 			}
 
 			&.hero-bottom-left-align {
 				> .wp-block-coblocks-hero__box {
 					display: table-cell;
-					vertical-align: middle;
-					width: 30%;
+					vertical-align: bottom;
+					width: 33%;
+				}
+				p {
+				 width: 33%;
 				}
 			}
 
 			&.hero-bottom-center-align {
 				> .wp-block-coblocks-hero__box {
 					display: table-cell;
-					vertical-align: middle;
-					width: 30%;
+					vertical-align: bottom;
+					width: 33%;
+				}
+				p {
+					padding-left: 33%;
+					padding-right: 33%;
+					
 				}
 			}
 
 			&.hero-bottom-right-align {
 				> .wp-block-coblocks-hero__box {
 					display: table-cell;
-					vertical-align: middle;
-					width: 30%;
+					vertical-align: bottom;
+					width: 33%;
+				}
+				p {
+					padding-left: 66%;
 				}
 			}
 		}
