--- a/src/blocks/events/styles/style.scss
+++ b/src/blocks/events/styles/style.scss
@@ -12,6 +12,40 @@
 		margin-top: 3em;
 	}
 
+	.wp-block-coblocks-events__more-events-wrapper {
+	  display: flex;
+
+	  .coblocks-events__next-page-icon-container {
+		display: flex;
+		align-items: center;
+		cursor: pointer;
+
+		.next-page-icon {
+		  cursor: pointer;
+		  width: 24px;
+		  height: 24px;
+		  background-color: #000;
+		  -webkit-mask-image: url(images/events/next-page-arrow.svg);
+		  mask-image: url(images/events/next-page-arrow.svg);
+		}
+	  }
+
+	  .coblocks-events__previous-page-icon-container {
+		display: flex;
+		align-items: center;
+		cursor: pointer;
+
+		.previous-page-icon {
+		  cursor: pointer;
+		  width: 24px;
+		  height: 24px;
+		  background-color: #000;
+		  -webkit-mask-image: url(images/events/previous-page-arrow.svg);
+		  mask-image: url(images/events/previous-page-arrow.svg);
+		}
+	  }
+	}
+
 	> h1,
 	> h2,
 	> h3,
