--- a/src/blocks/blogroll/styles/editor.scss
+++ b/src/blocks/blogroll/styles/editor.scss
@@ -1,4 +1,4 @@
-.editor-block-list__block[data-type="coblocks/blog"] {
+.editor-block-list__block[data-type="coblocks/blogroll"] {
   padding-left: 2.5em;
   &.is-style-grid {
 	padding-left: 0;
@@ -9,7 +9,7 @@
   }
 
   &.editor-block-list__block[data-align="full"] {
-	.wp-block-coblocks-blog {
+	.wp-block-coblocks-blogroll {
 	  padding: 0 12px;
 	}
   }
