--- a/src/blocks/blogroll/styles/editor.scss
+++ b/src/blocks/blogroll/styles/editor.scss
@@ -19,3 +19,8 @@
 	position: inherit;
   }
 }
+
+.components-coblocks-gallery-inspector__autoplayspeed-select {
+  margin-bottom: 1.75em !important;
+  margin-top: -0.85em;
+}
