--- a/src/blocks/food-and-drinks/styles/style.scss
+++ b/src/blocks/food-and-drinks/styles/style.scss
@@ -1,14 +1,15 @@
 // Backwards compatibility for IE 11.
-:-ms-fullscreen,
-:root .entry-content {
-	.wp-block-coblocks-food-and-drinks {
-		display: -ms-grid; // Display flex does not behave correctly with IE 11
+// :-ms-fullscreen,
+// :root .entry-content {
+// 	.wp-block-coblocks-food-and-drinks {
 
-		h3 {
-			margin-bottom: 10px; // Handle extra spacing in IE 11.
-		}
-	}
-}
+// 		// display: flex;
+// 		// table-layout: fixed;
+// 		// flex: 50%;
+// 		// justify-content: space-between;
+// 		// flex-wrap: wrap;
+// 	}
+// }
 
 .wp-block-coblocks-food-and-drinks {
 	display: flex;
