Fix list-view for food-and-drinks

--- a/src/blocks/food-and-drinks/food-item/styles/editor.scss
+++ b/src/blocks/food-and-drinks/food-item/styles/editor.scss
@@ -1,3 +1,8 @@
+:-ms-fullscreen,
+:root .editor-block-list__block { 
+	margin-bottom: 15%;
+}
+
 .wp-block-coblocks-food-item {
 	display: block;
 	flex: 1 100%;
