--- a/src/blocks/alert/styles/style.scss
+++ b/src/blocks/alert/styles/style.scss
@@ -7,6 +7,26 @@
 		background-color: #f5f5f5;
 	}
 
+	&.is-style-info {
+		background-color: #d6efee;
+		color: #094264;
+	}
+
+	&.is-style-warning {
+		background-color: #fbe7dd;
+		color: #8a4b30;
+	}
+
+	&.is-style-error {
+		background-color: #ffdede;
+		color: #8b343c;
+	}
+
+	&.is-style-success {
+		background-color: #d0eac4;
+		color: #154a28;
+	}
+
 	&.alignleft,
 	&.alignright {
 		max-width: 300px;
@@ -16,8 +36,8 @@
 		color: inherit;
 		display: inline-block;
 		line-height: 1;
-		width: 100%;
 		margin-bottom: 0.75em;
+		width: 100%;
 
 		&:empty {
 			display: none;
