image crop control with fields for offsets

--- a/src/components/image-crop-control/styles/editor.scss
+++ b/src/components/image-crop-control/styles/editor.scss
@@ -27,3 +27,12 @@
     }
   }
 }
+
+.components-coblocks-offset-control {
+  display: flex;
+  justify-content: space-between;
+
+  > div {
+    width: 45%;
+  }
+}
